<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panther_lights_controller</name>
  <version>0.3.0</version>
  <description>The panther_lights_controller package</description>

  <maintainer email="szymon.szantula@husarion.com">byq77</maintainer>
  <maintainer email="adam.krawczyk@husarion.com">khasreto</maintainer>
  <maintainer email="krzysztof.wojciechowski@husarion.com">Kotochleb</maintainer>



  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>husarion_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>husarion_msgs</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>python-rosdep</exec_depend>
  <exec_depend>python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">message_runtime</exec_depend>

  <export>
  </export>
</package>
